@@ -20,7 +20,7 @@ import org.apache.kafka.clients.consumer.internals.AutoOffsetResetStrategy;
 import org.apache.kafka.common.KafkaFuture;
 import org.apache.kafka.common.TopicPartition;
 import org.apache.kafka.common.internals.KafkaFutureImpl;
-import org.apache.kafka.common.utils.LogContext;
+import org.apache.kafka.common.utils.internals.LogContext;
 import org.apache.kafka.streams.StreamsConfig;
 import org.apache.kafka.streams.TopologyConfig.TaskConfig;
 import org.apache.kafka.streams.errors.TopologyException;
@@ -58,8 +58,6 @@ import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-
-import static java.util.Collections.emptySet;
 
 public class TopologyMetadata {
     private Logger log;
@@ -138,6 +136,10 @@ public class TopologyMetadata {
     
     public ProcessingMode processingMode() {
         return processingMode;
+    }
+
+    public boolean streamsProtocolEnabled() {
+        return StreamsConfigUtils.streamsProtocolEnabled(config);
     }
 
     public long topologyVersion() {
@@ -230,7 +232,9 @@ public class TopologyMetadata {
                         log.debug("Detected that the topology is currently empty, waiting for something to process");
                         version.topologyCV.await();
                     } catch (final InterruptedException e) {
-                        log.error("StreamThread was interrupted while waiting on empty topology", e);
+                        Thread.currentThread().interrupt();
+                        log.warn("StreamThread was interrupted while waiting on empty topology", e);
+                        break;
                     }
                 }
             } finally {
@@ -392,7 +396,7 @@ public class TopologyMetadata {
     }
 
     public Set<String> namedTopologiesView() {
-        return hasNamedTopologies() ? Collections.unmodifiableSet(builders.keySet()) : emptySet();
+        return hasNamedTopologies() ? Collections.unmodifiableSet(builders.keySet()) : Set.of();
     }
 
     /**
